@@ -1,3 +1,7 @@
+2000-05-10  Bart Schaefer  <schaefer@zsh.org>
+
+	* 11312: Config/config.mk: defs.mk depends on config.status.
+
 2000-05-10  Tanaka Akira  <akr@zsh.org>
 
 	* 11309, 11310: Doc/Zsh/expn.yo: fix missing section.
